[package]
name = "iodine"
version = "0.1.1"
edition = "2021"
description = "Stack-based programming language"
authors = ["prodbysky", "stinta", "kyrbynyt@gmail.com"]
readme = "README.md"
repository = "https://github.com/prodbysky/iodine"
license = "MIT"
keywords = ["stack-based", "language"]
categories = ["compilers"]
exclude = ["main.iod"]

[[bin]]
name = "iodine"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }

[profile.dev]
opt.level = 0

[profile.release]
opt-level = 3
